--- a/winlogbeat/winlogbeat.yml
+++ b/winlogbeat/winlogbeat.yml
@@ -21,23 +21,24 @@
 # https://go.es.io/WinlogbeatConfig
 
 winlogbeat.event_logs:
-  - name: Application
-    ignore_older: 72h
+  # - name: Application
+  #   ignore_older: 72h
 
-  - name: System
+  # - name: System
 
-  - name: Security
+  # - name: Security
 
   - name: Microsoft-Windows-Sysmon/Operational
+    event_id: 3
 
-  - name: Windows PowerShell
-    event_id: 400, 403, 600, 800
+  # - name: Windows PowerShell
+  #   event_id: 400, 403, 600, 800
 
-  - name: Microsoft-Windows-PowerShell/Operational
-    event_id: 4103, 4104, 4105, 4106
+  # - name: Microsoft-Windows-PowerShell/Operational
+  #   event_id: 4103, 4104, 4105, 4106
 
-  - name: ForwardedEvents
-    tags: [forwarded]
+  # - name: ForwardedEvents
+  #   tags: [forwarded]
 
 # ====================== Elasticsearch template settings =======================
 
