add elk version of the python script

--- a/elk/kibana/config/kibana.yml
+++ b/elk/kibana/config/kibana.yml
@@ -11,8 +11,8 @@ monitoring.ui.container.logstash.enabled: true
 
 ## X-Pack security credentials
 #
-elasticsearch.username: kibana_system
-elasticsearch.password: ${KIBANA_SYSTEM_PASSWORD}
+# elasticsearch.username: kibana_system
+# elasticsearch.password: ${KIBANA_SYSTEM_PASSWORD}
 
 ## Encryption keys (optional but highly recommended)
 ##
