--- a/elk/docker-compose.yml
+++ b/elk/docker-compose.yml
@@ -66,28 +66,30 @@ services:
     networks:
       - elk
     restart: unless-stopped
-
-  logstash:
-    build:
-      context: logstash/
-      args:
-        ELASTIC_VERSION: ${ELASTIC_VERSION}
-    volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
-    ports:
-      - 5044:5044
-      - 50000:50000/tcp
-      - 50000:50000/udp
-      - 9600:9600
-    environment:
-      LS_JAVA_OPTS: -Xms256m -Xmx256m
-      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
-    restart: unless-stopped
+  
+  # FOR FUTURE USE
+  # logstash:
+  #  build:
+  #    context: logstash/
+  #    args:
+  #      ELASTIC_VERSION: ${ELASTIC_VERSION}
+  #  volumes:
+  #    - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
+  #    - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+  #  ports:
+  #    - 5044:5044
+  #    - 50000:50000/tcp
+  #    - 50000:50000/udp
+  #    - 9600:9600
+  #  environment:
+  #    LS_JAVA_OPTS: -Xms256m -Xmx256m
+  #    LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
+  #  networks:
+  #   - elk
+  #  depends_on:
+  #    - elasticsearch
+  #  restart: unless-stopped
+  # FOR FUTURE USE
 
   kibana:
     build:
