--- a/elk/.env
+++ b/elk/.env
@@ -1,4 +1,4 @@
-ELASTIC_VERSION=8.12.1
+ELASTIC_VERSION=8.13.1
 
 ## Passwords for stack users
 #
@@ -13,7 +13,7 @@ ELASTIC_PASSWORD='changeme'
 #
 # The user Logstash uses to connect and send data to Elasticsearch.
 # https://www.elastic.co/guide/en/logstash/current/ls-security.html
-LOGSTASH_INTERNAL_PASSWORD='changeme'
+# LOGSTASH_INTERNAL_PASSWORD='changeme'
 
 # User 'kibana_system' (built-in)
 #
