--- a/elk/kibana/Dockerfile
+++ b/elk/kibana/Dockerfile
@@ -1,7 +1,4 @@
-ARG ELASTIC_VERSION
-
-# https://www.docker.elastic.co/
+# kibana/Dockerfile
+ARG ELASTIC_VERSION==8.15.1
 FROM docker.elastic.co/kibana/kibana:${ELASTIC_VERSION}
-
-# Add your kibana plugins setup here
-# Example: RUN kibana-plugin install <name|url>
+EXPOSE 5601
