--- a/vue_application/Ransomware Hunter/package.json
+++ b/vue_application/Ransomware Hunter/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --dom",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@vue/test-utils": "^2.4.6",
+    "vitest": "^2.1.3",
     "vue": "^3.5.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/ui": "^2.1.3",
+    "happy-dom": "^15.7.4",
     "vite": "^5.4.8"
   }
 }
