--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,27 +50,29 @@ services:
       - elk
     restart: unless-stopped
 
-  backend:
-    image: your_dockerhub_username/backend:latest
-    container_name: backend
-    depends_on:
-      - elasticsearch
-    environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - DEBUG=${DEBUG}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
-      # Add any other environment variables your Django app requires
-    ports:
-      - 8000:8000
-    volumes:
-      - static_volume:/app/static
-    networks:
-      - elk
-    restart: unless-stopped
+#  backend:
+#    image: fredjk/threat-hunting-backend:django-backend
+#    container_name: backend
+#    depends_on:
+#      - elasticsearch
+#    environment:
+#      - SECRET_KEY=django-insecure-5^9m19o#9q(yux@lm*0(z00ruo^fm)h7z&@0=0!rrxs4by9e_f
+#      - DEBUG=TRUE
+#      - ALLOWED_HOSTS=*
+#    ports:
+#      - 8000:8000
+#    volumes:
+#      - static_volume:/app/static
+#    networks:
+#      - elk
+#    restart: unless-stopped
 
 networks:
   elk:
     driver: bridge
+
+env_file:
+  - .env
 
 volumes:
   elasticsearch_data:
