--- a/frontend/ransomware-hunter/package.json
+++ b/frontend/ransomware-hunter/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@vue/test-utils": "^2.4.6",
+    "axios": "^1.7.7",
     "vitest": "^2.1.3",
-    "vue": "^3.5.11"
+    "vue": "^3.5.11",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/coverage-v8": "^2.1.3",
     "@vitest/ui": "^2.1.3",
     "happy-dom": "^15.7.4",
-    "vite": "^5.4.8"
+    "jsdom": "^25.0.1",
+    "vite": "^5.4.11"
   }
 }
