--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Java 17
+        run: sudo apt-get install openjdk-17-jdk
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
