--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
 
         # Route /api/ requests to the backend
         location /api/ {
-            proxy_pass http://backend:8000/api/;
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
