--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,9 @@ services:
       - frontend
       - backend
     ports:
-      - 8080:80  # Expose Nginx on port 80
+      - 8080:80  
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Mount custom Nginx config
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro  
     networks:
       - elk    
 
