--- a/nginx.conf
+++ b/nginx.conf
@@ -6,20 +6,22 @@ http {
 
         # Route /api/ requests to the backend
         location /api/ {
-            proxy_pass http://backend:8000/;
+            proxy_pass http://backend:8000/;  # Trailing slash is crucial
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_connect_timeout 60s;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
         }
 
-
-
-        # Serve frontend files
+        # Serve frontend files and handle client-side routing
         location / {
-            proxy_pass http://frontend:80/;
+            proxy_pass http://frontend:5137/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            try_files $uri /index.html;  # Serve index.html for unknown routes
         }
     }
 }
