--- a/nginx.conf
+++ b/nginx.conf
@@ -6,10 +6,19 @@ http {
 
         # Route /api/ requests to the backend
         location /api/ {
-            proxy_pass http://backend:8000/;  # Trailing slash is crucial
+            proxy_pass http://backend:8000;  # Trailing slash is crucial
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # Proxy all other requests to the frontend
+        location / {
+            proxy_pass http://frontend:80;  # Assuming frontend listens on port 80
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
